--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -1,5 +1,6 @@
 body {
   text-align: center;
+  padding-bottom: 100px;
 }
 
 h1 {
@@ -11,10 +12,15 @@ h1 {
 
 
 footer {
-  position:absolute;
+  position:fixed;
   bottom:0;
   left:0;
   width:100%;
   height:100px;
   background-color: yellow;
+  padding-top: 40px;
+}
+
+.imgmenu {
+  max-width: 50%;
 }
