--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -1,6 +1,21 @@
+* {
+  margin: 0;
+}
+
+.page {
+  min-height: 100%;
+  position: relative;
+}
+
+.inner-page {
+  padding: 0 0 11vh;
+}
+
 body {
   text-align: center;
-  padding-bottom: 100px;
+  font-family: sans-serif;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 h1 {
@@ -8,19 +23,21 @@ h1 {
   margin-bottom: 5vh;
 }
 
-
+.container {
+  padding-left: 10vw;
+  padding-right: 10vw;
+}
 
 
 footer {
-  position:fixed;
+  position: absolute;
   bottom:0;
   left:0;
   width:100%;
-  height:100px;
+  height:9vh;
   background-color: yellow;
-  padding-top: 40px;
 }
 
 .imgmenu {
-  max-width: 50%;
+  max-width: 70%;
 }
