--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -46,6 +46,11 @@ footer {
   width: 100%;
 }
 
+.menuitem {
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
 .rectangle {
   width: 70%;
   display: block;
@@ -54,9 +59,10 @@ footer {
   background-color: black;
   margin-bottom: 20px;
   color: white;
+  opacity: 1;
+  transition: opacity .25s ease-in-out;
 }
 
-.menuitem {
-  padding-bottom: 10px;
-  padding-top: 10px;
-}
+.rectangle:hover {
+    opacity: 0.6;
+  }
