--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -44,6 +44,8 @@ footer {
 
 .imgmenu {
   width: 100%;
+  height : 40%;
+  object-fit: cover;
 }
 
 .menuitem {
@@ -52,7 +54,7 @@ footer {
 }
 
 .rectangle {
-  width: 70%;
+  width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
