--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -68,3 +68,13 @@ footer {
 .rectangle:hover {
     opacity: 0.6;
   }
+
+  @media screen and (max-width: 800px) {
+    .col-sm {
+      min-width:80vw;
+    }
+    .container {
+      padding-left: 2vw;
+      padding-right: 2vw;
+    }
+  }
