--- a/css/listingstyle.css
+++ b/css/listingstyle.css
@@ -13,7 +13,7 @@ body{
 }
 
 .inner-page {
-  padding: 0 0 11vh;
+  padding: 11vh 0 11vh;
 }
 
 footer {
@@ -32,4 +32,24 @@ header {
   width:100%;
   height:9vh;
   background-color: yellow;
+}
+
+.listing {
+  width: 80vw;
+  height: 40vh;
+  border: 5px solid blue;
+  background-color: black;
+  color: white;
+  display: inline-block;
+}
+
+.listing img{
+  float: left;
+  height: 100%;
+  width: 30%;
+  object-fit: cover;
+}
+.description{
+  float: left;
+  border: 5px solid red;
 }
