--- a/css/listingstyle.css
+++ b/css/listingstyle.css
@@ -41,15 +41,20 @@ header {
   background-color: black;
   color: white;
   display: inline-block;
+  margin-bottom: 10vh;
 }
 
-.listing img{
+.listing img {
   float: left;
   height: 100%;
   width: 30%;
   object-fit: cover;
 }
-.description{
+.description {
   float: left;
   border: 5px solid red;
+  width: 65%;
+  text-align: left;
+}
+.description h2 {
 }
