--- a/css/listingstyle.css
+++ b/css/listingstyle.css
@@ -22,22 +22,39 @@ footer {
   left:0;
   width:100%;
   height:9vh;
-  background-color: yellow;
+  background-color: black;
 }
 
-header {
+a {
+  color: white;
+
+}
+
+.header {
   position:fixed;
-  top:0;
-  left:0;
   width:100%;
-  height:9vh;
-  background-color: yellow;
+  background-color: black;
+}
+
+.l {
+  padding: 14px 16px;
+  padding: 3vh;
+  display: inline-block;
+  /* Add transition for hover effects */
+  transition: all 0.3s ease;
+}
+
+.l:hover {
+  background-color: grey;
+}
+
+#active {
+  background-color: red;
 }
 
 .listing {
   width: 80vw;
   height: 40vh;
-  border: 5px solid blue;
   background-color: black;
   color: white;
   display: inline-block;
@@ -52,9 +69,9 @@ header {
 }
 .description {
   float: left;
-  border: 5px solid red;
   width: 65%;
   text-align: left;
 }
 .description h2 {
+
 }
