--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -52,12 +52,13 @@ h1 {
   margin-bottom: 20px;
   color: white;
   opacity: 1;
-  transition: opacity .25s ease-in-out;
+  transition: all 0.3s ease;
 }
 
-.rectangle:hover {
+/* .rectangle:hover menuitem p{
     opacity: 0.6;
-  }
+    text-decoration: none;
+  } */
 
 footer {
   position: absolute;
@@ -65,12 +66,18 @@ footer {
   left:0;
   width:100%;
   height:9vh;
+  min-height: 45px;
   background-color: black;
   color: white;
   padding-top: 10px;
 }
 
 a {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
   color: white;
 }
 
