--- a/css/listingstyle.css
+++ b/css/listingstyle.css
@@ -35,11 +35,17 @@ footer {
   width:100%;
   height:9vh;
   background-color: black;
+  padding-top: 10px;
+  color: white;
 }
 
 a {
   color: white;
+  text-decoration: none;
+}
 
+a:hover {
+  text-decoration: underline;
 }
 
 .header {
@@ -93,8 +99,5 @@ a {
   float: left;
   width: 65%;
   text-align: left;
-  margin: 20px 10px;
-}
-.description h2 {
-
+  margin: 25px 15px;
 }
