--- a/css/listingstyle.css
+++ b/css/listingstyle.css
@@ -8,6 +8,11 @@ body{
   margin: 0;
 }
 
+.contact {
+  bottom:20%;
+  position:absolute;
+}
+
 .page {
   min-height: 100%;
   position: relative;
@@ -100,4 +105,6 @@ a:hover {
   width: 65%;
   text-align: left;
   margin: 25px 15px;
+  height: 100%;
+  position:relative;
 }
