--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -13,7 +13,7 @@
 
 body {
   text-align: center;
-  font-family: sans-serif;
+  font-family: "Courier New", Courier, monospace;
   min-height: 100%;
   min-width: 100%;
 }
