--- a/css/placestyle.css
+++ b/css/placestyle.css
@@ -44,6 +44,10 @@ footer {
   color: white;
 }
 
+footer p {
+  margin: 0;
+}
+
 a {
   color: white;
   text-decoration: none;
@@ -89,4 +93,27 @@ a:hover {
   height:100%;
   width:auto;
   object-fit: contain;
+}
+
+p {
+  margin: 0 15vw 10vh 15vw;
+}
+
+.mapouter {
+  display: inline-block;
+  text-align:center;
+  height:500px;
+  width:600px;
+}
+
+.gmap_canvas {
+  overflow:hidden;
+  background:none;
+  height:100%;
+  width:100%;
+}
+
+#gmap_canvas {
+  width:100%;
+  height:100%;
 }
