--- a/css/about.css
+++ b/css/about.css
@@ -20,9 +20,9 @@ body{
 }
 
 h1 {
-  margin-top: 50px;
-  margin-bottom: 20px;
-  font-size: 40px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
 }
 
 footer {
@@ -46,7 +46,6 @@ a:hover {
 }
 
 .header {
-  position:fixed;
   width:100%;
   background-color: black;
   border-bottom: 4px solid white;
@@ -79,10 +78,10 @@ h1 {
   font-size: 3rem;
 }
 .blurb {
-  font-size: 16px;
+  font-size: 20px;
   margin-left: 20%;
   margin-right: 20%;
-  margin-bottom: 0;
+
 }
 
 .text {
@@ -100,7 +99,7 @@ p {
   font-weight: bold;
 }
 
-.button {
+button {
   background-color: black;
   border: 2px solid black;
   border-radius: 4px;
@@ -114,12 +113,12 @@ p {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
-.button {
+button {
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
 }
 
-.button:hover {
+button:hover {
   background-color: red;
   color: white;
   border: 2px solid red;
