Added popup for submit button
Added alert function for the submit button on the contribute form. It displays a message after click (it's phoney- only displays a message)

--- a/css/contributestyle.css
+++ b/css/contributestyle.css
@@ -97,7 +97,7 @@ p {
   font-weight: bold;
 }
 
-.button {
+button {
   background-color: black;
   border: 2px solid black;
   border-radius: 4px;
@@ -111,12 +111,12 @@ p {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
-.button {
+button {
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
 }
 
-.button:hover {
+button:hover {
   background-color: red;
   color: white;
   border: 2px solid red;
