--- a/css/about.css
+++ b/css/about.css
@@ -22,7 +22,7 @@ body{
 h1 {
   padding-top: 20vh;
   font-family: Papyrus; fantasy;
-  font-size: 3rem;
+  font-size: 3em;
 }
 
 footer {
@@ -74,7 +74,7 @@ input {
 }
 
 .blurb {
-  font-size: 20px;
+  font-size: 1.2em;
   margin-left: 20%;
   margin-right: 20%;
 
