--- a/css/contributestyle.css
+++ b/css/contributestyle.css
@@ -106,7 +106,7 @@ button {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 20px;
+  font-size: 1.2em;
   font-family: "Courier New", Courier, monospace;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
