--- a/css/placestyle.css
+++ b/css/placestyle.css
@@ -25,12 +25,12 @@ body{
 h1 {
   margin-top: 50px;
   margin-bottom: 20px;
-  font-size: 40px;
+  font-size: 4em;
 }
 
 .blurb {
   margin-bottom: 70px;
-  font-size: 18px;
+  font-size: 1.2em;
 }
 
 footer {
