--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -65,10 +65,9 @@ h2 {
   transition: all 0.3s ease;
 }
 
-/* .rectangle:hover menuitem p{
+ .rectangle:hover{
     opacity: 0.6;
-    text-decoration: none;
-  } */
+  }
 
 footer {
   position: absolute;
