--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -100,3 +100,10 @@ a:hover {
       padding-right: 2vw;
     }
   }
+
+@media screen and (min-width: 1500px) {
+    .container {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
