--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -17,7 +17,7 @@ body {
   min-height: 100%;
   min-width: 100%;
 }
-/* funky style for the welcome message */
+/* funky style for the banner */
 h2 {
   margin-top: 0;
   margin-bottom: 2vh;
