--- a/css/contributestyle.css
+++ b/css/contributestyle.css
@@ -8,8 +8,6 @@ body{
   margin: 0;
 }
 
-
-
 .page {
   min-height: 100%;
   position: relative;
@@ -25,6 +23,7 @@ h1 {
   font-size: 40px;
 }
 
+/* Footer menu at the bottom of the page */
 footer {
   position: absolute;
   bottom:0;
@@ -45,6 +44,7 @@ a:hover {
   text-decoration: underline;
 }
 
+/* Header menu at the top of the page */
 .header {
   position:fixed;
   width:100%;
@@ -66,6 +66,8 @@ a:hover {
   background-color: grey;
 }
 
+/* Small text boxes for name and email address */
+
 input {
   margin-bottom: 10vh;
   padding: 7px
@@ -80,14 +82,13 @@ h1 {
   font-size: 3rem;
 }
 
-
-
 .text {
   border: 1px solid black;
   border-radius: 4px;
   width: 300px;
 }
 
+/* Big text box for the actual message or contribution */
 textarea {
   margin-bottom: 5vh;
   height: 200px;
@@ -97,6 +98,7 @@ p {
   font-weight: bold;
 }
 
+/* Submit button for submitting a contribution */
 button {
   background-color: black;
   border: 2px solid black;
