--- a/css/listingstyle.css
+++ b/css/listingstyle.css
@@ -30,7 +30,7 @@ h1 {
   margin-top: 10vh;
   margin-bottom: 2vh;
   font-size: 4em;
-  font-family: Papyrus; fantasy;
+  font-family: Papyrus, "Courier New", Courier, monospace;
   color: black;
 }
 
