--- a/css/listingstyle.css
+++ b/css/listingstyle.css
@@ -119,7 +119,8 @@ a:hover {
   position:relative;
 }
 
-.description h3 {
+.description h2 {
   margin-top: 0;
-  margin-bottom: 2%;
+  margin-bottom: 0;
+  font-size: 1.17em;
 }
